# mprim_generator

./: CMakeLists.txt  README.md
csv/: optimisedtruckprims.csv
include/acado_math/: acado_math_functions.h
mprim/: truck.mprim
script/: csv_mprim_converter.py
src/: mprim.cpp
src/acado_math/: acado_math_functions.cpp
